[tool.poetry]
name = "flask-authentication"
version = "0.1.0"
description = ""
authors = ["Alen Vlahovljak <alen.vlahovljak@evolt.dev>"]
readme = "README.md"
packages = [{include = "flask_authentication"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.6.2"
click = "^8.1.3"
dominate = "^2.7.0"
Flask-Bootstrap = "^3.3.7.1"
Flask-WTF = "^1.0.1"
itsdangerous = "^2.1.2"
MarkupSafe = "^2.1.1"
visitor = "^0.1.3"
Werkzeug = "^2.2.2"
WTForms = "^3.0.1"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
